vimeo visibility—'padding-top' fix

--- a/project-new.css
+++ b/project-new.css
@@ -95,16 +95,16 @@ iframe.vimeo-video{
     transform: translate(-50%, -50%);
     height: 100%;
 }
-    .eighty-fifty-container{ aspect-ratio: 83 / 54; /* Set custom aspect ratio */}
+    .eighty-fifty-container{ aspect-ratio: 83 / 54; padding-top: calc(100% * (54 / 83));/* Set custom aspect ratio */}
     iframe.eighty-fifty-video{ width: 153.7%; /* 100 * (83 / 54) */}
 
-    .sixteen-nine-container { aspect-ratio: 16 / 9;}
+    .sixteen-nine-container { aspect-ratio: 16 / 9; padding-top: calc(100% * (9 / 16));}
     iframe.sixteen-nine-video { width: 177.78%; /* 100 * (16 / 9) */}
 
-    .ether-container { aspect-ratio: 25 / 18; }
+    .ether-container { aspect-ratio: 25 / 18; padding-top: calc(100% * (18 / 25));}
     iframe.ether-video { width: 138.89%; }
 
-    .human-container { aspect-ratio: 4 / 3; }
+    .human-container { aspect-ratio: 4 / 3; padding-top: calc(100% * (3 / 4));}
     iframe.human-video { width: 133.33%; }
 
 
